<resources>
    <string name="app_name">ChimpIn</string>
    <string name="signIN">Sign in</string>
    <string name="userSign">User Sign up</string>
    <string name="proSign">Professional Sign up</string>
    <string name="logInUser">Email</string>
    <string name="pass">Password</string>
    <string name="signUp">Sign Up</string>
    <string name="remMe">Remember me</string>
    <string name="forgPass">Forgot Password</string>
    <string name="Email">Email</string>
    <string name="userName">User Name</string>
    <string name="signFace">Sign up with Facebook</string>
    <string name="mobile">Phone Number</string>
    <string name="createAccount">Create Account</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="userAccount">User</string>
    <string name="proAccount">Professional</string>
    <string name="confirmNum">Confirm number</string>
    <string name="resendCode">Resend Code</string>
    <string name="enterCode">Enter code here</string>
    <string name="enterCodeSent">We have sent you an access code /n via sms for mobile number verification</string>
    <string name="photos">photos</string>
    <string name="event">Events</string>
    <string name="shareOption">Share Option</string>
    <string name="selectEvDate">Select event date</string>
    <string name="selectEvType">Select event type</string>
    <string name="set_email">Enter your Email</string>

    <string name="city">City</string>
    <string name="search">Search</string>
    <string name="gender">Gender</string>
    <string name="selectEvCity">Select City</string>
    <string name="selectEvGender">Select Gender</string>
    <string name="bottom_menu_last_work">LATEST WORK</string>
    <string name="bottom_menu_events">EVENTS</string>
    <string name="bottom_menu_packages">PACKAGES</string>
    <string name="bottom_menu_profile">PROFILE</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="packName">Package Name</string>
    <string name="packDesc">Package Description</string>
    <string name="packPrice">Package Price</string>
    <string name="packCreate">Add Package</string>
    <string name="button_edit_package">Save package</string>
    <string name="selectPackTy">Select Event Type</string>
    <string name="selectPackTyime">Select Event Time</string>
    <string name="sort">Sorted By</string>
    <string name="sortDate">Date</string>
    <string name="sortLocation">Location</string>
    <string name="sortNumEvents">Number of Events</string>
    <string name="sort_parameter_type">Type</string>
    <string name="title_activity_booking">Booking</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_approval">Approval</string>
    <string name="title_activity_contactpro">Contactpro</string>
    <string name="menu_title_edit">Edit</string>
    <string name="fragment_title_last_work">Latest work</string>
    <string name="fragment_title_events">Events</string>
    <string name="fragment_title_packages">Packages</string>
    <string name="fragment_title_my_profile">My profile</string>
    <string name="fragment_title_edit_profile">Edit profile</string>
    <string name="button_save">Save</string>
    <string name="complete_signup">Please complete the required information</string>
    <string name="check_pass">The password is very weak, please write new one</string>
    <string name="check_pass_match">The password does not match the confirm one</string>
    <string name="check_type">Please select your account type</string>
    <string name="wrong_message">The process is failed, please try later</string>
    <string name="invalid_code">Invalid Verification code</string>
    <string name="not_set">Not set</string>
    <string name="error_not_authenticated">You are not authenticated</string>
    <string name="button_logout">logout</string>
    <string name="error_field_missing">Please fill this field</string>
    <string name="title_activity_rejected">Rejected</string>
    <string name="title_activity_maps2">Map</string>
    <string name="button_add">Add</string>
    <string name="error_eventDate">you can\'t end event before its date</string>
    <string name="end_event_button">End event</string>
    <string name="phone">Phone</string>
    <string name="cancel_event_button">Cancel event</string>
    <string name="cancel_event_confirmation">You will be charged by 20% of event cost, are you sure you want to cancel this event?</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="area">Area</string>
    <string name="country">Country</string>
    <string name="years_exp">Years of Experience</string>
    <string name="work_hours">Working hours</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="complete_acc">Complete the account</string>
    <string name="keywords">Keywords</string>
    <string name="date">Date</string>
    <string name="en_over_booking">Enable Overbooking</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="time">Time</string>
    <string name="eve_avail">Event Availability</string>
    <string name="Location">Location</string>
    <string name="photographer">Photographer</string>
    <string name="event_type">Event Type</string>
    <string name="sharing">Sharing</string>
    <string name="notes">Notes</string>
    <string name="pending">Pending Event</string>
    <string name="edit">Edit</string>
    <string name="event_date">Event Date</string>
    <string name="sel_event_date">Select Event Date</string>
    <string name="address_note">Address more than 5 letters</string>
    <string name="note_pro">Note To Pro</string>
    <string name="proceed">Proceed</string>
    <string name="thank">Thanks you!</string>
    <string name="booking_accept_mess">The pro accepted your event and its booked you can contact the photographer now.</string>
    <string name="contact_photo">Contact Photographer</string>
    <string name="sorry">Sorry!</string>
    <string name="booking_reject_mess">The pro rejected your event</string>
    <string name="start_event">Start New Event</string>
    <string name="packages">Packages</string>
    <string name="total_fees">Total Fees</string>
    <string name="end_event">End Event</string>
    <string name="events">Events</string>
    <string name="photo">Photos</string>
    <string name="create_event">Create New Event</string>
    <string name="name">Name</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="assign_photo_event">Assign photographer to event</string>
    <string name="birth_date">Birth Date</string>
    <string name="exp">Experience</string>
    <string name="back_history">Back To History</string>
    <string name="resp_to_event">Respont To Event</string>
    <string name="logput">Logout</string>
    <string name="full_day">Full day</string>
    <string name="half_day">Half day</string>
    <string name="ok">Ok</string>
    <string name="per_hour">Per hour</string>
    <string name="add_pro">+ Add pro</string>
    <string name="delete">delete</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="booking_note_mess">Please note: \n - 20% deposit must be paid whithin 48 hours. If not, the request will be cancelled automatically. \n - You can refund the full deposit up till 1 week before the event, 10% back till 48 hours. Zero before 48 hours only. /></string>
    <string name="booking_mess_collect_call">A collector will call you to collect the deposit to confirm your request.</string>
    <string name="wait_mess">Wait the respond from our side to confirm your registration....</string>
    <string name="check">Check with us</string>


</resources>
