<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_events"
        android:enabled="true"
        android:icon="@mipmap/events_default"
        android:title="@string/bottom_menu_events"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_photographers"
        android:enabled="true"
        android:icon="@mipmap/packages_default"
        android:title="@string/bottom_menu_packages"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@mipmap/profile_default"
        android:title="@string/bottom_menu_profile"
        app:showAsAction="always" />

</menu>