<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Content_homePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Spinner

            android:id="@+id/proProfile_spinner_package_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/selectPackTy" />

        <Spinner

            android:id="@+id/proProfile_spinner_package_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:prompt="@string/selectPackTyime" />
        <EditText
            android:id="@+id/proProfile_editText_package_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/packName"
            android:textColor="@color/colorProfile"
            android:textColorHint="@color/colorProfile"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/proProfile_editText_package_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/packPrice"
            android:textColor="@color/colorProfile"
            android:textColorHint="@color/colorProfile"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/proProfile_editText_package_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/packDesc"
            android:textColor="@color/colorProfile"
            android:textColorHint="@color/colorProfile"
            android:textSize="16sp" />


    </LinearLayout>
    <Button
        android:id="@+id/signUp_button_SignFace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:layout_margin="30dp"
        android:background="@drawable/button_package"
        android:text="@string/packCreate"
        android:textColor="@color/colorWhite" />

</RelativeLayout>