<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Content_homePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/proProfile_spinner_package_type"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:prompt="@string/selectPackTy"
            android:spinnerMode="dropdown" />

        <Spinner

            android:id="@+id/proProfile_spinner_package_time"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:prompt="@string/selectPackTyime"
            android:spinnerMode="dropdown" />

        <EditText
            android:id="@+id/proProfile_editText_package_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/packName"
            android:inputType="textPersonName"
            android:textColor="@color/colorProfile"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorTab" />


        <EditText
            android:id="@+id/proProfile_editText_package_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/packPrice"
            android:inputType="number"
            android:textColor="@color/colorProfile"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorTab" />

        <EditText
            android:id="@+id/proProfile_editText_package_desc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/transparent"
            android:hint="@string/packDesc"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textColor="@color/colorProfile"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@color/colorTab" />

    </LinearLayout>

    <Button
        android:id="@+id/pro_packages_addPackage_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="30dp"
        android:background="@drawable/button_package"
        android:text="@string/button_edit_package"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite" />

</RelativeLayout>