<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Content_homePage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="6dp"
            android:text="@string/sort"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/proProfile_phot_search_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/sortDate"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/proProfile_phot_search_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/sortLocation"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/proProfile_phot_search_number_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="6dp"
            android:text="@string/sort_parameter_type"
            android:textSize="17sp" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/proProfile_event_recycler_view"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:layout_height="wrap_content" />


</LinearLayout>