<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.indeves.chmplinapp.Activities.LogIn">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="90dp"
                android:id="@+id/splash"
                android:layout_weight="1"
                android:src="@drawable/chimp_logo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/logIn_userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/logInUser"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/logIn_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="16sp" />


                <Button
                    android:id="@+id/LogIn_button_SignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button"
                    android:text="@string/signIN"

                    android:textColor="@color/colorWhite" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="horizontal">

                    <CheckBox
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/remMe"
                        android:textColor="@color/colorWhite" />

                    <TextView
                        android:id="@+id/logIn_Button_forgetPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="@string/forgPass"
                        android:textColor="@color/colorWhite" />

                </LinearLayout>

                <Button
                    android:id="@+id/LogIn_button_SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/button_white"
                    android:text="@string/signUp"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>
            </LinearLayout>
            <com.wang.avi.AVLoadingIndicatorView
                android:layout_centerVertical="true"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/indicator"
                app:indicatorColor="@color/usage_pink"
                app:indicatorName="BallPulseIndicator"
                style="@style/AVLoadingIndicatorView"
                />
        </RelativeLayout>
    </ScrollView>
</LinearLayout>